add filesink path

--- a/conf/flume-conf.properties
+++ b/conf/flume-conf.properties
@@ -14,7 +14,7 @@ agent1.sinks.RollingFileSink.type = com.dynatrace.diagnostics.core.realtime.flum
 agent1.sinks.RollingFileSink.sink.rollInterval = 600
 # Force cutoff at 10 MB
 agent1.sinks.RollingFileSink.sink.rollSize = 10
-agent1.sinks.RollingFileSink.sink.directory = data/purepath
+agent1.sinks.RollingFileSink.sink.directory = data/pp
 agent1.sinks.RollingFileSink.sink.batchSize = 1000
 # Attention the key for the serialize on file_roll is a little different
 agent1.sinks.RollingFileSink.sink.serializer = com.dynatrace.diagnostics.core.realtime.flume.BtExportJSONSerializerBuilder
