--- a/conf/flume-conf.properties
+++ b/conf/flume-conf.properties
@@ -1,23 +1,12 @@
 # Name the components on this agent
 agent1.sources = HTTPSource
-agent1.sinks = RollingFileSink ElasticSearchSink
+agent1.sinks = ElasticSearchSink
 agent1.channels = PurePathChannel
 
 # Describe/configure HTTPSource
 agent1.sources.HTTPSource.type = org.apache.flume.source.http.HTTPSource
 agent1.sources.HTTPSource.port = 4321
 agent1.sources.HTTPSource.handler = com.dynatrace.diagnostics.core.realtime.flume.BtExportHandler
-
-# Describe RollingFileSink
-agent1.sinks.RollingFileSink.type = com.dynatrace.diagnostics.core.realtime.flume.file.RollingFileSink
-# once every 10 min
-agent1.sinks.RollingFileSink.sink.rollInterval = 600
-# Force cutoff at 10 MB
-agent1.sinks.RollingFileSink.sink.rollSize = 10
-agent1.sinks.RollingFileSink.sink.directory = data/pp
-agent1.sinks.RollingFileSink.sink.batchSize = 1000
-# Attention the key for the serialize on file_roll is a little different
-agent1.sinks.RollingFileSink.sink.serializer = com.dynatrace.diagnostics.core.realtime.flume.BtExportJSONSerializerBuilder
 
 # Describe ElasticSearchSink
 agent1.sinks.ElasticSearchSink.type = org.apache.flume.sink.elasticsearch2.ElasticSearchSink
@@ -36,12 +25,8 @@ agent1.channels.PurePathChannel.transactionCapactiy = 10
 
 # Bind the source and sink to the channel
 agent1.sources.HTTPSource.channels = PurePathChannel 
-agent1.sinks.RollingFileSink.channel = PurePathChannel
 agent1.sinks.ElasticSearchSink.channel = PurePathChannel
 
 agent1.sources.HTTPSource.selector.type = multiplexing
 agent1.sources.HTTPSource.selector.header = btType
-#agent1.sources.HTTPSource.selector.mapping.PUREPATH = PurePathChannel
-#agent1.sources.HTTPSource.selector.mapping.PAGE_ACTION = UserActionChannel
-#agent1.sources.HTTPSource.selector.mapping.VISIT = VisitChannel
 agent1.sources.HTTPSource.selector.default = PurePathChannel
